@@ -12,6 +12,14 @@
   }
 }
 
+\section{version devel}{
+  \subsection{Minor change}{
+    \itemize{
+      \item plot.ISOFIND now detects sample of size 1 and no longer displays "Group" in the title of the assignment plot even if `who` = "group"
+      }
+  }
+}
+
 \section{version 0.8.2}{
   \subsection{New features}{
     \itemize{
@@ -212,4 +220,3 @@
       }
   }
 }
-
